public/stylesheets/style.css
@import url(https://fonts.googleapis.com/css?family=Oswald);
@import url(https://fonts.googleapis.com/css?family=Lato);

@custom-media --sm-viewport (max-width: 35.5em);
@custom-media --md-viewport (max-width: 48em);
@custom-media --lg-viewport (max-width: 64em);
@custom-media --xl-viewport (max-width: 80em);

:root {
	--primaryColor: #EB011A;
	--secondaryColor: #000;
	--accentColor: #95876D;
	--lightColor: #EEE;
	--mediumColor: #888;
	--darkColor: #000;
	--accentFont: 'Oswald', sans-serif;
	--normalFont: 'Lato', sans-serif;
	--sidebarWidth: 200px;
}

html, body {
	overflow: hidden;
}

html, body, button, input, select, textarea,
.pure-g [class *= "pure-u"] {
    color: var(--darkColor);
	font-family: var(--normalFont);
}

h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
	font-family: var(--accentFont);
	text-align: center;
}

a {
	color: var(--primaryColor);
	text-decoration: none;
}

	a:hover, a:focus {
		text-decoration: underline;
	}

.l-boxes {
	margin: 0 -0.5em;
}

	.l-boxes .l-box {
		padding: 0 0.5em;
	}
	
	@media(--sm-viewport){
		
		.l-boxes {
			margin: 0 -0.25em;
		}
		
			.l-boxes .l-box {
				padding: 0 0.25em;
			}
		
	}


.fade {
	max-height: 0;
	opacity: 0;
	transition: opacity 250ms, max-height 250ms;
	overflow: hidden;
}

	.fade.in {
		max-height: 500px;
		opacity: 1;
	}

.header, .content, .footer, .container {
	max-width: 568px;
	margin-left: auto;
	margin-right: auto;
	padding: 0 1em;
}

	.header {
		border-bottom: none;
		color: var(--darkColor);
		padding-top: 25px;
	}
	
		.header h1 > a {
			color: var(--darkColor);
			text-decoration: none;
		}
	
	.footer {
		padding-bottom: 20px;
		font-size: 11px;
		text-align: center;
	}
	
	.footer .facebook-info {
		margin: 10px auto;
	}

textarea, .pure-form textarea, 
input[type="text"], .pure-form input[type="text"]{
	background: none;
	border-radius: 0 !important;
	box-shadow: none !important;
	color: inherit;
	-webkit-appearance: none;
	background-color: var(--lightColor);
	border-color: transparent;
}

	textarea:focus, .pure-form textarea:focus, .pure-form input[type="text"]:focus, input[type="text"]:focus {
		background-color: #fff;
	}

.pure-g [class *= "pure-u"] .pure-button, .pure-button {
	border: 1px solid transparent;
	text-transform: uppercase;
	color: #fff;
	font-family: var(--accentFont);	
}

	.pure-button.pure-u-1 {
		padding-left: 0;
		padding-right: 0;
	}
	
	.pure-button:hover, .pure-button:focus {
		opacity: 0.7;
		background-image: none;
		text-decoration: none;
	}

	.pure-button-primary, a.pure-button-primary {
		background-color: var(--primaryColor);
	}

	.pure-button-secondary, a.pure-button-secondary {
		background-color: var(--mediumColor);
		color: #fff;
	}

	.pure-button-large {
		font-size: 1.5em;
	}
	
	.pure-button .fa.fa-shift {
		position: relative;
		top: -1px;
		left: 5px;
	}
	
	.pure-button[type=submit]{
		margin-top: 15px;
	}

/* =============  Landing Page ============= */
.hero {
	margin: 25px 0 0;
}

	.hero .hero-titles, .hero .hero-cta {
		text-align: center;
		padding: 10px;
	}
	
	.hero .hero-titles {
		padding-bottom: 0;
	}
	
		.hero .hero-titles .title {
			font-size: 3em;
			line-height: initial;
			text-transform: uppercase;
			margin-bottom: 15px;
		}
		
		.hero .alt-action {
			margin-top: 10px;
		}
		
		.hero .hero-titles .hero-desc {
			/*color: var(--mediumColor);*/
		}

/* =============  /Rule ============= */
.kings-rule-header {
	margin-bottom: 25px;
}

	.kings-rule-header .kings-rule-title {
		margin-bottom: 0;
	}

	.kings-rule-header .kings-rule-submitter {
		margin-top: 5px;
	}
	
.kings-rule {
	margin: 0 auto;
}

	.kings-rule .image {
		text-align: center;
	}

		.kings-rule .image img {
			height: 200px;
			width: 200px;
		}
		
		.kings-rule .image .no-image {
			font-size: 9em;
			line-height: initial;
		}

	.kings-rule .description {
		margin: 25px 0;
		line-height: 2.5em;
		text-align: center;
	}
	
	.kings-rule .actions .different-rule {
		margin: 2em 0;
		text-align: right;
	}
	
	.kings-rule .actions .share-options {
		padding-top: 1em;
	}
	
	.kings-rule .actions .permalink {
		font-family: var(--accentFont);
	}

/* =============  How to Play ============= */
.card-key-item {

}

	.card-key-item .card-key-title {
		background-color: var(--primaryColor);
		color: #fff;
		padding: 15px 10px; 
		margin-bottom: 5px;
		text-transform: uppercase;
	}
	
	.card-key-item .card-key-description {
		margin-top: 0;
		padding: 0 5px;
	}

/* =============  Social Media Buttons ============= */	
.facebook {
	background-color: #3b5998;
}

.twitter {
	background-color: #55ACEE;
}

.tumblr {
	background-color: #34465D
}

.pinterest, .pure-button.pinterest {
	background-color: #9B181D;
}

.email {
	background-color: var(--mediumColor);
}

.facebook-comments-container {
}


/* =============  Search ============= */
form[name=search]{
	position: relative;
}

form[name=search]:before{
	position: absolute;
	content: '\f002';
	font-family: FontAwesome;
	top: 0;
	left: 0;
	margin: 0.5em 0.6em;
	padding: 1.5px 0;
	font-size: 1em;
}

#search-input {
	padding-left: 2em;
	border-color: var(--darkColor);
	background-color: #fff;
}


/* =============  Search Result ============= */
.search-result {
	
}

	.search-result .search-result-title {
		text-align: center;
		line-height: normal;
	}
	
.error-message {
	color: var(--primaryColor);
}

.captcha {
	font-size: 3px;
	line-height: 2px;
	margin: 25px 0;
}

.ad {
	border: 1px solid var(--lightColor);
	margin-top: 25px;
	margin-bottom: 25px;
}

.rule-preview {
	padding: 3em 0.8em;
	margin: 1em 0;
	background-color: var(--lightColor);
}

	@media(--sm-viewport){ 
		.rule-preview {
			padding: 2em 0.4em;
		}	
	}

	.rule-preview-link:hover, .rule-preview-link:focus {
		text-decoration: underline;
		color: #000;
	}

	.rule-preview .rule-preview-image {
		padding: 0 2em;
	}
	
	.rule-preview .rule-preview-title {
		color: var(--darkColor);
		margin-top: 0;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	
.text-center {
	text-align: center;
}

